Nodes in the NodeStructure on the mission form page can now collapse and expand. AddAsset, RemoveAsset, and SubmitAsset buttons disable if a field is left blank on the node or action levels. Renamed components for the mission form page for consistency. Fixed bug where actions in the nodeActionList in the nodeAction window had top and bottom borders. Minor design changes.

--- a/src/components/pages/MissionFormPage.scss
+++ b/src/components/pages/MissionFormPage.scss
@@ -96,12 +96,6 @@
             .RightBracket {
               color: $color-main;
             }
-
-            &.Disabled {
-              pointer-events: none;
-              transform: scale(0.95);
-              opacity: 0.65;
-            }
           }
         }
       }
